# numberthree

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  MainLoop.cpp  MainLoop.h  Renderer.cpp  Renderer.h  Setup.cpp  Setup.h  main.cpp  pch.h
game/: CMakeLists.txt  Game.cpp  GameState.cpp  Renderer.cpp
game/include/game/: Game.h  GameState.h  Renderer.h
game/include/game/player/: PlayerInfo.h
game/include/game/renderer/: AssembleRenderer.h  GeneralRenderer.h  GeneralShadowMapRenderer.h
game/include/game/ui/: ConstructDebugUI.h  ConstructMovementHandlers.h
game/player/: PlayerInfo.cpp
game/renderer/: AssembleRenderer.cpp  GeneralRenderer.cpp  GeneralShadowMapRenderer.cpp
game/shaders/: General.frag  General.vert  GeneralShadowMap.vert
game/ui/: ConstructDebugUI.cpp  ConstructMovementHandlers.cpp  ConstructSpeedometer.cpp
resources/config/: README
resources/graphics/: dev.dds  food.dds  gnome.dds  s_block.dds  weird_ground.dds  weird_moss.dds
resources/graphics/fonts/: roboto_mono_12px_7x17_36x4.dds  roboto_mono_14px_8x19_32x4.dds  roboto_mono_16px_10x22_25x6.dds
resources/graphics/shaders/: Assemble.frag  Assemble.vert  General (2).frag  General.frag  General.vert
resources/saves/: README
resources/sound/: button.oga  hover.oga  text_delete.oga  text_edit.oga
