cmake_minimum_required(VERSION 3.20.3)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
	message(FATAL_ERROR "Source dir same as build dir. Please don't use in-source builds. Remove or change CMakeCache.txt to change build dir.")
endif()

project(numberthree LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED YES)

# msvc
if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
	message(STATUS "Compiler: MSVC")
	add_compile_options(/FC /W4 /WX /std:c++latest)

	# disabled warnings
	add_compile_options(/wd4100) # 'identifier' : unreferenced formal parameter

	# enabled warnings
	add_compile_options(/w44062) # enumerator 'identifier' in a switch of enum 'enumeration' is not handled
	add_compile_definitions(COMPILER_MSVC)

elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)

	# clang-cl
	if(${CMAKE_CXX_SIMULATE_ID} STREQUAL MSVC)
		message(STATUS "Compiler: Clang-cl")
		add_compile_options(-W4 -std:c++20)

		# disabled warnings
		add_compile_options(-Wno-sign-compare)
		add_compile_options(-Wno-unused-parameter)

		add_compile_definitions(COMPILER_CLANGCL)

	# clang
	else()
		message(STATUS "Compiler: Clang")
		add_compile_options(-W4 -Werror -std=c++20)

		# disabled warnings
		add_compile_options(-Wno-sign-compare)
		add_compile_options(-Wno-unused-parameter)

		add_compile_definitions(COMPILER_CLANG)
		message(WARNING "Clang not tested")
	endif()

else()
	message(FATAL_ERROR "Untested/unsupported compiler: ${CMAKE_CXX_COMPILER_ID}")
endif()

include("${PROJECT_SOURCE_DIR}/cmake/FindStaticLib.cmake")


find_package(OpenGL REQUIRED)
find_package(GLM REQUIRED)
find_package(GLFW3 REQUIRED)
find_package(GLEW REQUIRED)
find_package(GLI REQUIRED)
find_package(SDL2 REQUIRED)
find_package(SDL_Mixer REQUIRED)

find_package(PhysX)

set(UI_FOUND OK)
set(WGLM_FOUND OK)
set(MEM_FOUND OK)
set(MISC_FOUND OK)
set(GAME_FOUND OK)
set(TEPP_FOUND OK)
set(SOUND_FOUND OK)
set(SERIAL_FOUND OK)

add_subdirectory(serial)
add_subdirectory(ui)
add_subdirectory(mem)
add_subdirectory(misc)
add_subdirectory(game)
add_subdirectory(render)
add_subdirectory(wrapped_glm)
add_subdirectory(tepp)
add_subdirectory(sound)

add_subdirectory(app)

